apps/workloads/technitium/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  labels:
    app: dns
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
