apps/workloads/technitium/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-server
  namespace: dns
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dns-server
  template:
    metadata:
      labels:
        app: dns-server
    spec:
      containers:
      - image: technitium/dns-server:9.1
        name: technitium
        imagePullPolicy: Always
        ports:
          - containerPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort: 53
            name: dns-tcp
            protocol: TCP
          - containerPort: 5380
            name: http
            protocol: TCP
        volumeMounts:
          - name: config-volume
            mountPath: /etc/dns/config
        envfrom:
        - secretRef:
            name: technisecret
        resources:
            limits:
              memory: 1.5Gi
            requests:
              memory: 1Gi
              cpu: "1"
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: dns-volv-pvc
