apps/workloads/technitium/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dns-console
  namespace: dns
  labels:
    metallb.universe.tf/address-pool: Internal-pool
spec:
  ports:
  - name: http
    port: 5380
    targetPort: 5380
    protocol: TCP
  loadBalancerIP: 10.0.0.41
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: dns-service
  namespace: dns
  labels:
    metallb.universe.tf/address-pool: Internal-pool
spec:
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  loadBalancerIP: 10.0.0.114
  type: LoadBalancer
